Fix requirement editor that was too large to be displayed correctly

--- a/src/app/shared/stat-requirements-editor.component.scss
+++ b/src/app/shared/stat-requirements-editor.component.scss
@@ -16,4 +16,20 @@
             align-items: center;
         }
     }
+
+}
+
+.new-requirement {
+    display: grid;
+    grid-gap: 8px;
+    grid-template-columns: 60px 60px 100px 20px;
+    align-items: center;
+
+    .max,
+    .min,
+    {
+        mat-form-field {
+            width: 100%;
+        }
+    }
 }
